--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jest": "^29.7.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
